# nemotron-reasoning-lora

./: .gitignore  LICENSE  README.md  pyproject.toml
data_pipeline/: ATTRIBUTION.md  augmentation.py  corpus.py  export_tokens.py  reasoning.py
data_pipeline/augmenters/: __init__.py  concatenation.py  lstrip.py  matching.py  spelling.py  splitting.py
data_pipeline/reasoners/: bit_manipulation.py  cipher.py  cryptarithm.py  equation_numeric.py  gravity.py  numeral.py  store_types.py  unit_conversion.py
docs/: METHOD.md
notebooks/: train.ipynb
src/nemotron_lora/: __init__.py  __main__.py  config.py  data.py  train.py
tests/: test_data.py  test_export_tokens.py
